--- a/Advanced/A_d-modules/css/style.css
+++ b/Advanced/A_d-modules/css/style.css
@@ -26,6 +26,7 @@ li{
 	box-shadow: 0 0 2px 1px rgba(214, 214, 214, 0.582);
 	/* display: flex;
 	flex-direction: column; */
+	position: relative;
 
 }
 
@@ -77,6 +78,22 @@ cursor:pointer;
 .block__show-data,
 .block__buy{
 	border-radius:5px;
+}
+
+.errorProducts{
+	width: 300%;
+	height: 50px;
+	left: -100%;
+	top: 20px;
+	padding: 10px;
+	background-color: rgb(248, 168, 168);
+	position: absolute;
+	z-index: 100;
+	border-radius: 5px;
+	font-family: sans-serif;
+	/* text-align: center; */
+	vertical-align: middle;
+
 }
 
 
