--- a/Advanced/A_d-localStorage/style.css
+++ b/Advanced/A_d-localStorage/style.css
@@ -13,9 +13,13 @@ body{
 .sign-in{
     display: none;
 }
-/* #button-signIn{
+
+/* .wrap-input, */
+.error-enter,
+#button-signUp,
+#button-signIn{
     position:relative;
-} */
+}
 
 
 
@@ -30,23 +34,34 @@ body{
 .sigin-now:hover{
     border-color:#0d6efd;
 }
-.error{
-    display: inline;
-}
 
-.error-empty-storage{
-    padding: 2px 10px;
-    margin: 5px 0;
-    background-color: rgb(255, 82, 82);
+
+.error{
+    padding: .2em .5em;
+    background-color: hsl(0, 81%, 61%);
     border-radius: 5px;
     color:white;
     display: inline-block;
+    /* position: absolute;
+    top: -75%;
+    left: 0;     */
+    font-size: 12px;
+  
+   
 }
 
+.error-enter{
+   
+}
 
 
 h2{
     font-size: 28px;
     text-align: center;
     margin-bottom: 20px;
+}
+
+.input-field,
+.input-up{
+    margin-bottom: 30px;
 }
